; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_child_alloc.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_children.c_fpm_child_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fpm_child_s = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.fpm_child_s* ()* @fpm_child_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.fpm_child_s* @fpm_child_alloc() #0 {
  %1 = alloca %struct.fpm_child_s*, align 8
  %2 = alloca %struct.fpm_child_s*, align 8
  %3 = call %struct.fpm_child_s* @malloc(i32 4)
  store %struct.fpm_child_s* %3, %struct.fpm_child_s** %2, align 8
  %4 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %5 = icmp ne %struct.fpm_child_s* %4, null
  br i1 %5, label %7, label %6

6:                                                ; preds = %0
  store %struct.fpm_child_s* null, %struct.fpm_child_s** %1, align 8
  br label %13

7:                                                ; preds = %0
  %8 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %9 = call i32 @memset(%struct.fpm_child_s* %8, i32 0, i32 4)
  %10 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  %11 = getelementptr inbounds %struct.fpm_child_s, %struct.fpm_child_s* %10, i32 0, i32 0
  store i32 -1, i32* %11, align 4
  %12 = load %struct.fpm_child_s*, %struct.fpm_child_s** %2, align 8
  store %struct.fpm_child_s* %12, %struct.fpm_child_s** %1, align 8
  br label %13

13:                                               ; preds = %7, %6
  %14 = load %struct.fpm_child_s*, %struct.fpm_child_s** %1, align 8
  ret %struct.fpm_child_s* %14
}

declare dso_local %struct.fpm_child_s* @malloc(i32) #1

declare dso_local i32 @memset(%struct.fpm_child_s*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
